tests/NormalTests/paczka2/big_fuzzy/77810339.err
Error in line 9: 2JW5 A940 64,3
Error in line 16: qxK A940 31,1
Error in line 27: S798 A940 63,4
Error in line 33: 2JW5 A62 33,5
Error in line 36: qxK A940 19,1
Error in line 42: 9wb A940 89,5
Error in line 43: 9wb A62 49,3
Error in line 51: qxK A62 29,7
Error in line 47: yVQuLN A62 35,9
Error in line 57: cLRo91KcYD S798 75,5
Error in line 58: yVQuLN S51 28,4
Error in line 62: 2JW5 S51 54,2
Error in line 79: yVQuLN S51 17,0
Error in line 82: qxK S798 62,6
Error in line 120: qxK A940 3O,O
Error in line 134: S798 A940 46,56
Error in line 128: 2JW5 S798 77,4
Error in line 139: qxK S798 25,8
Error in line 144: Mu745yv A940 72,79
Error in line 150: yVQuLN A940 18,5
Error in line 147: Mu745yv A940 269,7
Error in line 146: 9wb S51 81,3
Error in line 156: 9wb S798 46,8
Error in line 119: S798 A940 16,9
Error in line 153: 2JW5 S51 54,6
Error in line 172: yVQuLN A62 2,9
Error in line 184: S798 A940 98,w
Error in line 189: Mu745yv A940 88,3
Error in line 199: cLRo91KcYD A62 81,3
Error in line 197: qxK A940 0,2
Error in line 205: cLRo91KcYD S798 18,7
Error in line 201: Mu745yv S51 121,0
Error in line 214: cLRo91KcYD S51 25,3
Error in line 216: Mu745yv S798 66,4
Error in line 234: qxK A940 71,6
Error in line 232: 9wb A940 30,2
Error in line 244: qxK S51 27,1
Error in line 233: Mu745yv A62 60,2
